force-app/main/default/objects/WL_Dummy_Order__c/WL_Dummy_Order__c.object-meta.xml
<CustomObject>
    <label>WL_Dummy_Order</label>
    <nameField>
        <label>WL_Dummy_Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WL_Dummy_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>