force-app/main/default/objects/WL_Dummy_Order__c/fields/BatchFlag__c.field-meta.xml
<CustomField>
    <fullName>BatchFlag__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Batch 작업 수행했는지 Flag</description>
    <label>BatchFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>