force-app/main/default/objects/WL_Dummy_Order__c/fields/RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>RegionalManager__c</fullName>
    <label>RegionalManager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>