force-app/main/default/objects/WL_Dummy_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_ID__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Ship_Mode__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Segment__c</columns>
    <columns>CountryRegion__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>